# bpmn-multiagent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/ground_truth/: processo1_pedido.bpmn  processo2_reembolso.bpmn  processo3_clinica.bpmn
docs/: agent-specification.md  architecture.md  architecture.txt  setup_ollama.md  sprint1_comparison.md  sprint2_comparison.md  sprint3_comparison.md  usage_guide.md
docs/chart/: chart.css  chart.js  index.html
docs/decisions/: ADR-001-multiagent.md  ADR-002-langgraph.md  ADR-003-lxml.md  ADR-004-processmodel.md
experiments/: compare_results.py  run_baseline.py  run_multiagent.py
outputs/debug/: invalid_bpmn_20260529_123722.bpmn  invalid_bpmn_20260529_125327.bpmn  invalid_bpmn_20260529_125731.bpmn  invalid_bpmn_20260529_130125.bpmn  invalid_bpmn_20260529_130446.bpmn  invalid_bpmn_20260529_131411.bpmn  invalid_bpmn_20260529_131653.bpmn  invalid_bpmn_20260529_131931.bpmn  invalid_bpmn_20260529_132548.bpmn  invalid_bpmn_20260529_132934.bpmn  invalid_bpmn_20260529_133220.bpmn  invalid_bpmn_20260529_133422.bpmn  invalid_bpmn_20260529_150303.bpmn  invalid_bpmn_20260529_150541.bpmn  invalid_bpmn_20260529_150813.bpmn  invalid_bpmn_20260529_151041.bpmn  validation_report_20260529_125327.json  validation_report_20260529_125731.json  validation_report_20260529_130125.json  validation_report_20260529_130446.json  validation_report_20260529_131411.json  validation_report_20260529_131653.json  validation_report_20260529_131931.json  validation_report_20260529_132548.json  validation_report_20260529_132934.json  validation_report_20260529_133220.json  validation_report_20260529_133422.json  validation_report_20260529_150303.json  validation_report_20260529_150541.json  validation_report_20260529_150813.json  validation_report_20260529_151041.json
prompts/: extraction.txt  extraction_refinement.txt  modeling.txt  modeling_refinement.txt  monolithic.txt  refinement.txt
renderer/: package-lock.json  package.json  render_bpmn.js
src/agents/: base_agent.py  bpmn_agent.py  extraction_agent.py  (+4 more)
tests/: test_baseline.py  test_multiagent.py  test_validation.py
(+14 files in other folders)
