[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bpmn-multiagent"
version = "0.1.0"
description = "Multi-agent pipeline for BPMN generation from natural language using LLMs"
requires-python = ">=3.11"

dependencies = [
    # ── Agentes e Orquestração ─────────────────────────────────────────────
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",      # trocar conforme provedor escolhido
    "langgraph>=0.1.0",

    # ── API ───────────────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",

    # ── Geração XML BPMN ─────────────────────────────────────────────────
    "lxml>=5.2.0",

    # ── Persistência ──────────────────────────────────────────────────────
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",              # driver async para PostgreSQL
    "alembic>=1.13.0",              # migrations

    # ── Utilitários ───────────────────────────────────────────────────────
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]