[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpmn-multiagent"
version = "0.1.0"
description = "Multi-agent pipeline for BPMN generation from natural language using LLMs"
requires-python = ">=3.10"

dependencies = [
    "langgraph>=0.2.0",
    "ollama>=0.4.0",
    "lxml>=5.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"